--- a/.github/workflows/pr3.yaml
+++ b/.github/workflows/pr3.yaml
@@ -1,5 +1,5 @@
-name: Pull Request
-on: [pull_request, workflow_dispatch]
+name: custom
+on: [workflow_dispatch]
 
 concurrency:
   group: ${{ github.head_ref || github.run_id }}
