--- a/.github/workflows/pr3.yaml
+++ b/.github/workflows/pr3.yaml
@@ -1,5 +1,5 @@
 name: custom
-on: [workflow_dispatch]
+on: [workflow_dispatch, push]
 
 concurrency:
   group: ${{ github.head_ref || github.run_id }}
